[oss-fuzz] timeout: expand_dns_name epan/dissectors/packet-dns.c:1158:21
This issue was migrated from bug 13633 in our old bug tracker.
Original bug information:
Reporter: Peter Wu
Status: RESOLVED FIXED
Product: Wireshark
Component: Dissection engine (libwireshark)
OS: Linux
Platform: x86-64
Version: Git
Attachments:
clusterfuzz-testcase-minimized-5760818371100672.pcap: Packet capture file
clusterfuzz-testcase-minimized-5760818371100672-udp.pcap: Packet capture file (Ethernet instead of ExportedPdu format)
See also:
Issue #13628 (closed)
http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2017-9345